# qianyan

./: .gitignore  AGENTS.md  BUGS.md  Cargo.toml  GEMINI.md  INSTALL_GUIDE.md  INSTALL_GUIDE_ZH.md  README.md  README_ZH.md  build.rs  deny.toml  en_first_letter_conflicts.txt  en_suggestions_curated.txt  gemini_find_bug.md  issues.md  missing_standard_chars.txt  page_flip_debug.txt  qianyan-ime.desktop  qianyan-ime.iss  shian-ime.desktop  stroke_map.txt  wentidian.md  yidian.md
configs/: appearance.json  doublepinyin.json  files.json  fuzzy.json  hotkeys.json  input.json  layout.json  layouts.json  linux.json  pinyin.json  punctuation.json  punctuations.json  quickfinals.json  system.json
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  utils.rs
crates/engine/: Cargo.toml
crates/engine/src/: compiler.rs  compositor.rs  config_manager.rs  context.rs  dispatcher.rs  keys.rs  lib.rs  pipeline.rs  scheme.rs  session.rs  sound.rs  traits.rs  trie.rs  user_data.rs
crates/engine/src/pipeline/: compose.rs  compose_utils.rs  engine.rs  filters.rs  mod.rs  search_helper.rs  segmentation.rs  similarity.rs  translators.rs  word_discovery.rs
crates/engine/src/processor/: actor.rs  commands.rs  fsm.rs  handlers.rs  intents.rs  learning.rs  mod.rs  punctuation.rs  session_state.rs  utils.rs
crates/engine/src/schemes/: chinese.rs  english.rs  japanese.rs  stroke.rs
crates/platform-linux/: Cargo.toml
crates/platform-linux/src/: cli.rs  kwin.rs  lib.rs  main.rs  runtime.rs
crates/platform-linux/src/hosts/: evdev_host.rs  ibus_backend.rs  ibus_host.rs  mod.rs  traits.rs  vkbd.rs  wayland.rs  wayland_host.rs  wayland_host_v1.rs
crates/platform-linux/src/ui/: tray.rs
crates/platform-windows/: Cargo.toml
crates/platform-windows/src/: class_factory.rs  constants.rs  lib.rs  main.rs  registry.rs  text_service.rs  tsf.rs
crates/resources/: Cargo.toml  build.rs
crates/resources/src/: lib.rs
crates/ui/: Cargo.toml  build.rs
crates/ui/src/: candidate.slint  gui_slint.rs  keystroke.slint  keystroke_overlay.rs  lib.rs  linux_notify.rs  local_notify.rs  main.slint  slint_window.rs  status_bar.slint  tray.rs  wayland_layer.rs  web.rs
crates/ui/src/ipc/: transport.rs
crates/ui/src/platform/: fonts.rs  mod.rs
crates/web-settings/: Cargo.toml
crates/web-settings/src/: main.rs
deb-build/shian-ime_0.1.0_amd64/DEBIAN/: control  postinst  prerm
dicts/chinese/: bihua.txt  punctuation.json  single_syllables.txt  syllable_freq.txt  syllables.txt  top_10000_syllable_words.txt  笔画对比结果.txt
dicts/chinese/chars/: chars.json  chars_diff_trans.txt  chars_output_trans.txt  duplicates.txt  find_missing_chars.py  level1.json  level2.json  level2_output.txt  level3.json  level4.json  missing_chars.txt  stroke_aux_analysis.md  tiqu.py
dicts/chinese/words/: discovered.json  emoji_zh.json  emoji_zh.txt  low_freq_trans.txt  to_retranslate.txt  to_retranslate_trans.txt  translate_words.py  translation_checkpoint.json
dicts/english/: en_conflict_suggestions.json  en_suggestions_chars.txt  english_dict_.json  english_dict_geater5.json  merge_dicts.py
dicts/japanese/: N1.json  N2.json  N3.json  N4.json  N5.json  cjdict_non_japanese.txt  cjdict_sample.txt  cjdict_sample_trans.txt  cjdict_sample_words.txt  syllables.txt  translate_words.py
dicts/shengpizi/: stroke_chars.json  syllables.txt
dicts/stroke/: stroke_map.txt
dicts/stroke/chars/: stroke_chars.json  stroke_chars_level-1.json  stroke_chars_level-2.json  stroke_chars_level-3.json
docs/: ARCHITECTURE_REFACTORING_PLAN.md  future_plan.md  stroke_radicals_map.md  stroke_radicals_map.txt  wayland-im-notes.md
refe_rdict/: chars.txt  rebuild_bihuama_dict.py  rime_new_words_translate.txt  translate_words.py
referdict/: data_v2.js
scripts/: generate_syllable_freq.py  package-release.sh  register-kwin-vk.sh
scripts/install/: install.sh
src/: config.rs  constants.rs  error.rs  lib.rs  main.rs  registry.rs  text_service.rs
src/app/: cli.rs  runtime.rs
src/engine/: compositor.rs  config_manager.rs  context.rs  dispatcher.rs  mod.rs  pipeline.rs  scheme.rs  session.rs  sound.rs  traits.rs  trie.rs  user_data.rs
src/engine/processor/: commands.rs  fsm.rs  handlers.rs  intents.rs  learning.rs  mod.rs  punctuation.rs  session_state.rs  utils.rs
src/engine/schemes/: chinese.rs  english.rs  japanese.rs  mod.rs  stroke.rs
src/platform/: fonts.rs  mod.rs  traits.rs
src/platform/linux/: evdev_host.rs  ibus_host.rs  mod.rs  vkbd.rs  wayland.rs
src/platform/windows/: mod.rs  tsf.rs
static/: help.html  index.html  virtual_keyboard.html
static/css/: style.css
static/js/: settings.js  sidebar.js
static/presets/: double_pinyin_sougou.json  double_pinyin_xiaohe.json  double_pinyin_ziranma.json  layout_chinese.json  layout_english.json  layout_japanese.json
static/settings/: appearance.html  article_practice.html  backup.html  converter.html  dictionary.html  dictionary_editor.html  dictionary_viewer.html  doublepinyin.html  emojis.html  fuzzy.html  hotkeys.html  keybehavior.html  keyboard.html  keyboard_layout.html  keystroke.html  layout.html  learning.html  pinyin.html  pinyin_converter.html  punctuation.html  quickfinals.html  stroke_practice.html  symbols.html  system.html  user_dict_editor.html  utilities.html  word_discovery.html
static/texts/: qianziwen.txt
static/tools/: card.html
tests/: check_jianpin.py  check_sm_final.py  test_all_hotkeys.py  test_arrow_keys.py  test_capslock_nav.py  test_core_logic.sh  test_custom_flipping.py  test_features.py  test_fuzhuma.sh  test_jianpin.sh  test_ngram_learning.py  test_reorder.py  test_reorder_bug.py  test_shortcuts.py  test_stroke_auto_commit.py  test_uppercase.py
tools/: add_strokes_field.py  apply_stroke_aux.py  bihua.txt  compare_emojis.py  convert_emoji_zh.py  extract_stroke_map.py  find_missing_standard.py  fix_docs.py  fix_docs_final.py  fix_docs_v3.py  gen_level4.py  generate_radicals_txt.py  rebuild_stroke_aux_v3.py  refactor_stroke_dict.py  temp_check_code.py  update_analysis.py  update_readme.py  update_stroke_aux.py
(+40 files in other folders)
