[workspace]
members = [
    "crates/core",
    "crates/engine",
    "crates/ui",
    "crates/platform-linux",
    "crates/platform-windows",
    "crates/web-settings",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Shian"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
rodio = "0.19"
notify-rust = "4"
arboard = "3.2"
arc-swap = "1.7"
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
rust-embed = "8.2"
mime_guess = "2.0"
open = "5.1"
fst = "0.4"
memmap2 = "0.9"
image = "0.24"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
slint = "1.16.1"
slint-build = "1.16.1"
rayon = "1.10"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
winres = "0.1.12"
embed-resource = "1.8"

# Linux
evdev = "0.12.1"
libc = "0.2"
daemonize = "0.5"
ksni = "0.2.1"
wl-clipboard-rs = "0.9"

# Windows
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_TextServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Ole",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Console",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_Media",
    "Win32_Media_Audio",
    "implement",
] }
windows-core = "0.52"

[package]
name = "qianyan-ime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
qianyan-ime-core = { path = "crates/core" }
qianyan-ime-engine = { path = "crates/engine" }
qianyan-ime-ui = { path = "crates/ui" }
qianyan-ime-linux = { path = "crates/platform-linux" }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
notify-rust = { workspace = true }
arboard = { workspace = true }
arc-swap = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
open = { workspace = true }
fst = { workspace = true }
memmap2 = { workspace = true }
image = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
thiserror = { workspace = true }
slint = { workspace = true }
rodio = { workspace = true }
encoding_rs = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
qianyan-ime-linux = { path = "crates/platform-linux" }
evdev = { workspace = true }
daemonize = { workspace = true }
ksni = { workspace = true }
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
qianyan-ime-windows = { path = "crates/platform-windows" }

[build-dependencies]
slint-build = { workspace = true }

[target.'cfg(windows)'.build-dependencies]
winres = { workspace = true }
embed-resource = { workspace = true }

[[bin]]
name = "qianyan-ime"
path = "src/main.rs"

[[bin]]
name = "qianyan-ime-gui"
path = "src/bin/gui.rs"