[package]
name = "shian-ime-engine"
version.workspace = true
edition.workspace = true

[dependencies]
shian-ime-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
rodio = { workspace = true }
walkdir = { workspace = true }
fst = { workspace = true }
memmap2 = { workspace = true }
arc-swap = { workspace = true }