[package]
name = "shian-ime-linux"
version.workspace = true
edition.workspace = true

[dependencies]
shian-ime-core = { path = "../core" }
shian-ime-engine = { path = "../engine" }
shian-ime-ui = { path = "../ui" }
shian-ime-resources = { path = "../resources" }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
slint = { workspace = true }
evdev = { workspace = true }
users = { workspace = true }
signal-hook = { workspace = true }
daemonize = { workspace = true }
libc = { workspace = true }
nix = { workspace = true }
wayland-client = { workspace = true }
wayland-protocols = { workspace = true }
wayland-cursor = { workspace = true }
zbus = { workspace = true }
rust-embed = { workspace = true }
notify-rust = { workspace = true }
reqwest = { workspace = true }
urlencoding = { workspace = true }
open = { workspace = true }
image = { workspace = true }
arboard = { workspace = true }
ksni = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
slint-build = { workspace = true }