[package]
name = "shian-ime-linux"
version.workspace = true
edition.workspace = true

[dependencies]
shian-ime-core = { path = "../core" }
shian-ime-engine = { path = "../engine" }
shian-ime-ui = { path = "../ui" }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
evdev = { workspace = true }
daemonize = { workspace = true }
arboard = { workspace = true }