[package]
name = "qianyan-ime-linux"
version.workspace = true
edition.workspace = true

[dependencies]
qianyan-ime-core = { path = "../core" }
qianyan-ime-engine = { path = "../engine" }
qianyan-ime-ui = { path = "../ui" }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
evdev = { workspace = true }
libc = { workspace = true }
daemonize = { workspace = true }
arboard = { workspace = true }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["unstable"] }
wayland-protocols-misc = "0.3"
xkbcommon = "0.8"