[package]
name = "shian-ime-windows"
version.workspace = true
edition.workspace = true

[lib]
name = "shian_ime_tsf"
crate-type = ["cdylib", "rlib"]

[dependencies]
shian-ime-core = { path = "../core" }
shian-ime-engine = { path = "../engine" }
shian-ime-ui = { path = "../ui" }
shian-ime-resources = { path = "../resources" }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
slint = { workspace = true }
windows = { workspace = true }
windows-core = { workspace = true }
notify-rust = { workspace = true }
reqwest = { workspace = true }
urlencoding = { workspace = true }
open = { workspace = true }
image = { workspace = true }
arboard = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
slint-build = { workspace = true }
winres = { workspace = true }
embed-resource = { workspace = true }