[package]
name = "shian-ime-windows"
version.workspace = true
edition.workspace = true

[lib]
name = "shian_ime_tsf"
crate-type = ["cdylib", "rlib"]

[dependencies]
shian-ime-core = { path = "../core" }
shian-ime-engine = { path = "../engine" }
shian-ime-ui = { path = "../ui" }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
slint = { workspace = true }
windows = { workspace = true }
windows-core = { workspace = true }
notify-rust = { workspace = true }
open = { workspace = true }
image = { workspace = true }
arboard = { workspace = true }

[build-dependencies]
slint-build = { workspace = true }
winres = { workspace = true }
embed-resource = { workspace = true }