[package]
name = "qianyan-ime-ui"
version.workspace = true
edition.workspace = true

[dependencies]
qianyan-ime-core = { path = "../core" }
qianyan-ime-engine = { path = "../engine" }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
slint = { workspace = true }
slint-build = { workspace = true }
axum = { workspace = true }
mime_guess = { workspace = true }
rust-embed = { workspace = true }
arc-swap = { workspace = true }
fst = { workspace = true }
image = { workspace = true }
walkdir = { workspace = true }
encoding_rs = { workspace = true }
encoding_rs_io = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
i-slint-core = { version = "1" }
i-slint-renderer-skia = { version = "1", default-features = false }
notify-rust = { workspace = true }
ksni = { workspace = true }
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }
smithay-client-toolkit = "0.20"
memmap2 = { workspace = true }
wayland-client = "0.31"
bytemuck = "1"
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = ["Win32_System_Registry", "Win32_Foundation"] }

[build-dependencies]
slint-build = { workspace = true }